--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Build with PyInstaller
       run: |
-        pyinstaller --onefile --name velora --add-data "Velora:Velora" Velora/__main__.py
+        pyinstaller --onefile --name velora main.py
 
     - name: Test executable
       run: |
